# disco_rl

./: README.md  __init__.py  agent.py  optimizers.py  pyproject.toml  requirements.txt  types.py  utils.py
colabs/: eval.ipynb  meta_train.ipynb
docs/: _config.yml  index.md
environments/: base.py  catch.py  jittable_envs.py
environments/wrappers/: batched_env.py  batched_jittable_env.py  single_stream_env.py
networks/: action_models.py  meta_nets.py  nets.py
update_rules/: actor_critic.py  base.py  disco.py  input_transforms.py  policy_gradient.py
value_fns/: value_fn.py  value_utils.py
